--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -566,7 +566,13 @@ body {
   }
 }
 
-
+/*-----------------------------nav-tab-theme-------------------------------------------------*/
+.nav-item {
+  color: #000 !important;
+}
+.nav-item i {
+  font-size: 0.9em;
+}
 
 
 /*-----------------------------box-theme-------------------------------------------------*/
@@ -586,11 +592,15 @@ body {
   padding-bottom: 20px;
 }
 .box-head p {
-  font-size: 1.5em;
+  font-size: 1.3em;
   margin: 0;
 }
 .box-body {
   padding: 20px 20px 20px;
+}
+.form {
+  padding: 30px 20px 20px;
+  background-color: #fff;
 }
 .form-div {
   display: flex;
@@ -833,7 +843,7 @@ background-color: #4c546d;
 .pro-bar {
   /*margin: 20px;*/
   width: 100%;
-  height: 10px;
+  height: 8px;
   background-color: #ced4da;
   display: block;
   position: relative;
