--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -965,8 +965,8 @@ background-color: #4c546d;
 }
 
 @keyframes pop-up {
-  0% { opacity: 0; display: block; }
+  0% { opacity: o; display: block; }
   10% { opacity: 1; }
   80% { opacity: 1; }
-  100% {opacity:0; }
+  100% {opacity:1; }
 }
