--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -824,7 +824,7 @@ background-color: #4c546d;
   display: flex;
   align-items: center;
   /*background-color: #e2dbd3;*/
-  background-color: #dfe9e9;
+  background-color: #fff ;
   padding: 25px 20px 25px 100px;
 }
 .head-pic img {
@@ -845,7 +845,7 @@ background-color: #4c546d;
 }
 .detail-body {
   padding: 30px 0 20px 0;
-  margin: 0 100px
+  margin: 0 1% 0 1% ;
 }
 .body-row {
   display: flex;
@@ -970,13 +970,13 @@ background-color: #4c546d;
   80% { opacity: 1; }
   100% {opacity:1; }
 }
-<<<<<<< HEAD
+
 
 /*list of employees*/
 .employee_table :hover{
   cursor: pointer;
 }
-=======
+
 /*-----------------------------prfile-picture-theme-------------------------------------------------*/
 .drop-down-item {
   margin: 0 15px 0 30px;
@@ -1075,5 +1075,3 @@ background-color: #4c546d;
   text-shadow: 0.3px 0.3px #6c757d;
   text-decoration: none;
 }  
-  
->>>>>>> afc5ab89e220c3a9d4448d48a84216f6ba0979c8
