--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -726,14 +726,19 @@ body {
   background-color: #e8e8ed;
 }
 .thead-dark tr td {
-  background-color: #343a40 !important;
+  background-color: #fff !important;
 }
 /*-----------------------------tool-tip-table-theme-------------------------------------------------*/
 .btn-edit, .btn-archive {
   border: none;
   background-color: #ffffff00;
-  margin: 0 20px 0 0;
+  margin: 0 5px 0 0;
   cursor: pointer;
+  padding: 2px 9px;
+}
+.btn-edit:hover, .btn-archive:hover {
+  background-color: #fff;
+  outline: 1px solid #dee2e6;
 }
 .btn-edit {
   color: #3ad;
@@ -977,7 +982,7 @@ body {
   0% { opacity: 0; display: block; }
   10% { opacity: 1; }
   80% { opacity: 1; }
-  100% {opacity:1; }
+  100% {opacity: 1; }
 }
 .arch-msg {
   animation: pop-ups 3s linear forwards;
@@ -986,10 +991,10 @@ body {
   0% { opacity: 0; display: block; }
   10% { opacity: 1; }
   80% { opacity: 1; }
-  100% {opacity:0; }
+  100% {opacity:0; display: none; }
 }
 /*list of employees*/
-.employee_table :hover{
+.employee_table tbody tr:hover{
   cursor: pointer;
 }
 /*-----------------------------prfile-picture-theme-------------------------------------------------*/
@@ -1100,7 +1105,7 @@ body {
 .page-limit a, .page-limit strong {
   color: #000;
   padding: 7px 12px;
-  font-weight: bold;
+  font-weight: 500;
   background-color: #fff;
   border: 1px solid #dddddd;
 }
