--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1075,3 +1075,7 @@ background-color: #4c546d;
   text-shadow: 0.3px 0.3px #6c757d;
   text-decoration: none;
 }  
+
+.item-1{
+  font-weight:bold;
+}
