--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -867,8 +867,8 @@ body {
   padding: 5px 0 10px;
 }
 .body-row .item-1 {
-  text-align: right;
-  margin-right: 50px;
+  /*text-align: right;*/
+  margin-left: 30px;
   width: 200px;
 }
 .body-row .item-2 {
@@ -1121,3 +1121,19 @@ body {
   border: 0.2px solid #337ab7;
   border-radius: 3px;
   color: #fff;
+}
+/*-----------------------------prfile-picture-theme-------------------------------------------------*/
+.modal-content {
+  background-color: #95a6b9 !important;
+}
+.register i {
+  margin: 20px 0 10px !important;
+}
+.register a {
+  padding: 5px 20px;
+  display: inline-block;
+  margin-top: 40px;
+  background-color: #87c540;
+  border-radius: 10px;
+  color: #fff;
+}
