--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -1084,13 +1084,7 @@ body {
   height: 40px;
 }
 
-#message {
-  background-color: #fff;
-  margin: 0;
-  padding: 0 10px;
-  width: 300px;
-  margin: 10px 20px 0;
-}
+
 .arch-msg-div {
   position: fixed;
   margin: 10px 20px 0 0;
@@ -1107,11 +1101,22 @@ body {
   animation: pop-up 7s linear forwards;
 }
 
+
+
 @keyframes pop-up {
   0% { opacity: 0; display: block; }
   5% { opacity: 1; }
   90% { opacity: 1; }
   100% {opacity: 0; display: none; }
+}
+
+
+#message {
+  background-color: #fff;
+  padding: 0;
+  width: 300px;
+  margin: 0.5% 0 0 0;
+    animation: none;
 }
 .arch-msg {
   display: flex;
