--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -742,6 +742,10 @@ body {
   padding: 8px 15px;
   flex: 80%;
 }
+.form-group input, .form-group select, .form-group textarea, .form-group input[type="date"] {
+  border: 0.5px solid #ced4da;
+  padding: 8px 15px !important;  
+}
 .form-div > div {
   flex: 80%;
 }
