--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -1170,7 +1170,7 @@ body {
 }
 /*-----------------------------prfile-picture-theme-------------------------------------------------*/
 .drop-down-item {
-  margin: 0 15px 0 30px;
+  margin: 0 0 0 30px;
   padding: 5px 20px;
   color: #fff;
   /*color: #d6dffa;*/
@@ -1196,7 +1196,7 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  margin-right: 10px;
+  margin-left: 15px;
 }
 .drop-down-item img:hover {
   cursor: pointer;
