--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -636,15 +636,20 @@ body {
 .con-sum {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   margin-bottom: 40px;
 }
 .sum-item {
-  width: 23%;
+  width: 24%;
+  margin-right: 1.33%;
   background-color: #fff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.2s;
 }
+.sum-item:last-child {
+  margin-right: 0;
+}
+
 .sum-item:hover, .sum-item a {
   text-decoration: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);  
@@ -684,13 +689,20 @@ body {
 
 @media screen and (max-width: 991px){
   .sum-item {
-    width: 48%;
+    width: 49%;
     margin-bottom: 20px;
   }
+  .sum-item:nth-child(even) {
+    margin-right: 0;
+  }
+  .sum-item:nth-child(odd) {
+    margin-right: 2%;
+  }  
 }
 @media screen and (max-width: 767px){
   .sum-item {
     width: 100%;
+    margin-right: 0px !important;
     margin-bottom: 20px;
   }
 }
@@ -725,7 +737,7 @@ body {
   margin: 0;
 }
 .box-body {
-  padding: 20px 20px 20px;
+  padding: 30px 20px 40px;
 }
 .form {
   padding: 0 20px 20px;
@@ -899,14 +911,16 @@ body {
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
-
+  overflow: visible;
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
+  left: -20px;
   /*left: -20px;*/
   width: 180px;
   padding-bottom: 10px;
 }
+
 
 #deleteExp .tooltiptext{
   position: unset;
@@ -1200,7 +1214,7 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 .drop-down-item img:hover {
   cursor: pointer;
@@ -1284,6 +1298,7 @@ body {
 /*-----------------------------prfile-picture-theme-------------------------------------------------*/
 .page-limit {
   width: 100%;
+  margin-top: 30px;
   /*text-align: center;*/
 }
 .page-limit a, .page-limit strong {
