--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -624,7 +624,7 @@ body {
   align-items: center;
 }
 .emp-link {
-  margin-bottom: -20px;
+  /*margin-bottom: -20px;*/
   padding: 0;
 }
 .emp-link a {
@@ -852,6 +852,24 @@ body {
 
 
 /*-----------------------------table-theme-------------------------------------------------*/
+#datatable {
+  margin: 20px 0 20px;
+  border: none;
+}
+#datatable_length, .dataTables_filter {
+  margin-bottom: 10px;
+}
+#datatable_length select {
+  margin: 0 5px 0 5px;
+  width: 60px;
+}
+.dataTables_filter input {
+  border: 1px solid #ced4da !important;
+  border-radius: 3px;
+  width: 250px;
+  margin-left: 40px;
+  padding: 5px;
+}
 .table tbody tr:nth-child(odd) {
   background-color: #f5f6fa;
 }
