leave Approve Template

--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -1183,6 +1183,7 @@ body {
   margin: 10px 20px 0 0;
   right: 0;
   top: 0;
+  z-index: 99;
 }
 .message, .arch-msg {
   display: block;
@@ -1376,6 +1377,45 @@ body {
   color: #fff;
 }
 /*-----------------------------prfile-picture-theme-------------------------------------------------*/
+.modal {
+  position: fixed;
+  display: none;
+  left: 0;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  overflow: auto;
+  z-index: 20;
+  top: 0;
+}
+.modal-content {
+  animation-name: mdopen;
+  border-radius: 5px;
+  animation-duration: 0.3s;
+  padding: 20px;
+  width: 50%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+  margin: 5% auto 0;
+  /*min-height: 50%;*/
+  background-color: #f7f7f7;
+  position: relative;
+}
+.md-form {
+  margin-bottom: 20px;
+}
+.md-form label {
+  width: 8%;
+  margin-right: 10px;
+}
+.md-form textarea {
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  width: 90%;
+}
+.md-form textarea {
+  outline: none;
+}
 .modal-content {
   background-color: #fff;
 }
