Auto-suggestion on Address tab (employee-manage)

--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -1,3 +1,48 @@
+/*---------------- Auto-suggestion on Address tab (employee-manage)s ----------------*/
+
+.autocomplete {
+  position: relative;
+  width: 400px;
+}
+.autocomplete .close {
+  position: absolute;
+  font-size: 13px;
+  z-index: 10;
+  top: 10px;
+  left: calc(100% - 50px);
+  color: #aaa;
+  cursor: pointer;
+  display: none;
+}
+.autocomplete .close.visible {
+  display: block;
+}
+.dialog {
+  width: 100%;
+  position: absolute;
+  z-index: 99;
+  display: none;
+  min-height: 0;
+  max-height: 330px;
+  overflow: scroll;
+  border-top: 1px solid #f4f4f4;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+}
+.dialog.open {
+  display: block;
+}
+.dialog div {
+  padding: 10px 5px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.dialog div:hover {
+  background: #f2f2f2;
+}
+
+
 /*---------------- header-theme ----------------*/
 
 @import url("font-awesome.min.css");
