add + delete work experience works now

--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -1679,3 +1679,8 @@ width: auto;
   border:0;
 
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
