--- a/assets/css/ems.css
+++ b/assets/css/ems.css
@@ -1,141 +1,3 @@
-/*---------------- Auto-suggestion on District Address tab (employee-manage)s ----------------*/
-
-.autocomplete {
-  position: relative;
-  min-width: 449px;
-}
-.autocomplete .close {
-  position: absolute;
-  font-size: 13px;
-  z-index: 10;
-  top: 10px;
-  left: calc(100% - 50px);
-  color: #aaa;
-  cursor: pointer;
-  display: none;
-}
-.autocomplete .close.visible {
-  display: block;
-}
-.dialog {
-  width: 100%;
-  position: absolute;
-  z-index: 99;
-  display: none;
-  min-height: 0;
-  max-height: 330px;
-  overflow: scroll;
-  border-top: 1px solid #f4f4f4;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-}
-.dialog.open {
-  display: block;
-  
-}
-.dialog div {
-  padding: 10px 5px;
-  font-size: 13px;
-  cursor: pointer;
-  transition: all 0.2s;
-}
-.dialog div:hover {
-  background: #f2f2f2;
-}
-
-/*---------------- Auto-suggestion on Temporary-District Address tab (employee-manage)s ----------------*/
-
-.autocompleteDistrict {
-  position: relative;
-  width: 449px;
-}
-.autocompleteDistrict .closeDistrict {
-  position: absolute;
-  font-size: 13px;
-  z-index: 10;
-  top: 10px;
-  left: calc(100% - 50px);
-  color: #aaa;
-  cursor: pointer;
-  display: none;
-}
-.autocompleteDistrict .closeDistrict.visible {
-  display: block;
-}
-.dialogDistrict {
-  width: 100%;
-  position: absolute;
-  z-index: 99;
-  display: none;
-  min-height: 0;
-  max-height: 330px;
-  overflow: scroll;
-  border-top: 1px solid #f4f4f4;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-}
-.dialogDistrict.openDistrict {
-  display: block;
-  
-}
-.dialogDistrict div {
-  padding: 10px 5px;
-  font-size: 13px;
-  cursor: pointer;
-  transition: all 0.2s;
-}
-.dialogDistrict div:hover {
-  background: #f2f2f2;
-}
-
-
-/*---------------- Auto-suggestion on State Address tab (employee-manage)s ----------------*/
-
-.autocompleteState {
-  position: relative;
-  min-width: 449px;
-  margin-right: 4px;
-}
-.autocompleteState .closeState {
-  position: absolute;
-  font-size: 13px;
-  z-index: 10;
-  top: 10px;
-  left: calc(100% - 50px);
-  color: #aaa;
-  cursor: pointer;
-  display: none;
-}
-.autocompleteState .closeState.visible {
-  display: block;
-}
-.dialogState {
-  width: 100%;
-  position: absolute;
-  z-index: 100;
-  display: none;
-  min-height: 0;
-  max-height: 330px;
-  overflow: scroll;
-  border-top: 1px solid #f4f4f4;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-}
-.dialogState.openState {
-  display: block;
-  
-}
-.dialogState div {
-  padding: 10px 5px;
-  font-size: 13px;
-  cursor: pointer;
-  transition: all 0.2s;
-}
-.dialogState div:hover {
-  background: #f2f2f2;
-}
-
-
 /*---------------- header-theme ----------------*/
 
 @import url("font-awesome.min.css");
@@ -795,7 +657,7 @@ body {
   width: 85%;
 }
 .emp-link {
-  /*margin-bottom: -20px;*/
+  margin-bottom: 10px;
   padding: 0;
 }
 .emp-link a {
@@ -1433,6 +1295,149 @@ body {
 .res-color {
   color: green;
 }
+
+
+
+
+/*---------------- Auto-suggestion on District Address tab (employee-manage)s ----------------*/
+
+.autocomplete {
+  position: relative;
+  min-width: 25%;
+}
+.autocomplete .close {
+  position: absolute;
+  font-size: 13px;
+  z-index: 10;
+  top: 10px;
+  left: calc(100% - 50px);
+  color: #aaa;
+  cursor: pointer;
+  display: none;
+}
+.autocomplete .close.visible {
+  display: block;
+}
+.dialog {
+  width: 100%;
+  position: absolute;
+  z-index: 99;
+  display: none;
+  min-height: 0;
+  max-height: 330px;
+  overflow: scroll;
+  border-top: 1px solid #f4f4f4;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+}
+.dialog.open {
+  display: block;
+  
+}
+.dialog div {
+  padding: 10px 5px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.dialog div:hover {
+  background: #f2f2f2;
+}
+
+/*---------------- Auto-suggestion on Temporary-District Address tab (employee-manage)s ----------------*/
+
+.autocompleteDistrict {
+  position: relative;
+  width: 25%;
+}
+.autocompleteDistrict .closeDistrict {
+  position: absolute;
+  font-size: 13px;
+  z-index: 10;
+  top: 10px;
+  left: calc(100% - 50px);
+  color: #aaa;
+  cursor: pointer;
+  display: none;
+}
+.autocompleteDistrict .closeDistrict.visible {
+  display: block;
+}
+.dialogDistrict {
+  width: 100%;
+  position: absolute;
+  z-index: 99;
+  display: none;
+  min-height: 0;
+  max-height: 330px;
+  overflow: scroll;
+  border-top: 1px solid #f4f4f4;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+}
+.dialogDistrict.openDistrict {
+  display: block;
+  
+}
+.dialogDistrict div {
+  padding: 10px 5px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.dialogDistrict div:hover {
+  background: #f2f2f2;
+}
+
+
+/*---------------- Auto-suggestion on State Address tab (employee-manage)s ----------------*/
+
+.autocompleteState {
+  position: relative;
+  min-width: 25%;
+  margin-right: 4px;
+}
+.autocompleteState .closeState {
+  position: absolute;
+  font-size: 13px;
+  z-index: 10;
+  top: 10px;
+  left: calc(100% - 50px);
+  color: #aaa;
+  cursor: pointer;
+  display: none;
+}
+.autocompleteState .closeState.visible {
+  display: block;
+}
+.dialogState {
+  width: 100%;
+  position: absolute;
+  z-index: 100;
+  display: none;
+  min-height: 0;
+  max-height: 330px;
+  overflow: scroll;
+  border-top: 1px solid #f4f4f4;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+}
+.dialogState.openState {
+  display: block;
+  
+}
+.dialogState div {
+  padding: 10px 5px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.dialogState div:hover {
+  background: #f2f2f2;
+}
+
+
+
 /*-----------------------------prfile-picture-theme-------------------------------------------------*/
 .drop-down-item {
   margin: 0 0 0 30px;
@@ -1566,7 +1571,7 @@ body {
 
 /*-----------------------------horiziontal-line-theme-------------------------------------------------*/
 .hr {
-  margin: 10px 0 30px;
+  margin: 0px 0 30px;
 }
 .card{
   margin-bottom: 2%;
